ошибки.txt
Run npm run test -- --run

> dexsafe-wallet-pro@0.1.0 test
> vitest --run


 RUN  v4.0.5 /home/runner/work/Presentation-site-landing/Presentation-site-landing

 ✓ src/tests/unit/Card.test.tsx (3 tests) 42ms
 ✓ src/tests/unit/Button.test.tsx (5 tests) 255ms

⎯⎯⎯⎯⎯⎯ Failed Suites 1 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  src/tests/integration/Navigation.test.tsx [ src/tests/integration/Navigation.test.tsx ]
Error: Transform failed with 1 error:
/home/runner/work/Presentation-site-landing/Presentation-site-landing/src/tests/integration/Navigation.test.tsx:27:9: ERROR: Unexpected ","

 Test Files  1 failed | 2 passed (3)
      Tests  8 passed (8)
   Start at  13:47:01
   Duration  1.78s (transform 122ms, setup 256ms, collect 712ms, tests 297ms, environment 1.96s, prepare 45ms)

  Plugin: vite:esbuild
  File: /home/runner/work/Presentation-site-landing/Presentation-site-landing/src/tests/integration/Navigation.test.tsx:27:9
  
  Unexpected ","
  25 |            case 'header.contact': return 'Contact';
  26 |            default: return key;
  27 |          },
     |           ^
  28 |          i18n: {
  29 |            changeLanguage: vi.fn(),
  
 ❯ failureErrorWithLog node_modules/vitest/node_modules/esbuild/lib/main.js:1467:15
 ❯ node_modules/vitest/node_modules/esbuild/lib/main.js:736:50
 ❯ responseCallbacks.<computed> node_modules/vitest/node_modules/esbuild/lib/main.js:603:9
 ❯ handleIncomingPacket node_modules/vitest/node_modules/esbuild/lib/main.js:658:12
 ❯ Socket.readFromStdout node_modules/vitest/node_modules/esbuild/lib/main.js:581:7

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯

Error: Process completed with exit code 1.

Run npm run lint

> dexsafe-wallet-pro@0.1.0 lint
> eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0


/home/runner/work/Presentation-site-landing/Presentation-site-landing/src/components/sections/0_Header.tsx
Error:   58:16  error  Replace `·to="hero"·smooth={true}·duration={500}·className="cursor-pointer·flex·items-center"·data-testid="logo-link"` with `⏎············to="hero"⏎············smooth={true}⏎············duration={500}⏎············className="cursor-pointer·flex·items-center"⏎············data-testid="logo-link"⏎··········`  prettier/prettier

/home/runner/work/Presentation-site-landing/Presentation-site-landing/src/tests/integration/Navigation.test.tsx
  27:9  error  Parsing error: Declaration or statement expected

✖ 2 problems (2 errors, 0 warnings)
  1 error and 0 warnings potentially fixable with the `--fix` option.

Error: Process completed with exit code 1.

Run npm run build

> dexsafe-wallet-pro@0.1.0 build
> tsc && vite build

Error: src/tests/integration/Navigation.test.tsx(27,10): error TS1128: Declaration or statement expected.
Error: src/tests/integration/Navigation.test.tsx(30,19): error TS1005: ';' expected.
Error: src/tests/integration/Navigation.test.tsx(31,9): error TS1109: Expression expected.
Error: src/tests/integration/Navigation.test.tsx(31,10): error TS1128: Declaration or statement expected.
Error: src/tests/integration/Navigation.test.tsx(32,8): error TS1005: ',' expected.
Error: src/tests/integration/Navigation.test.tsx(34,3): error TS1109: Expression expected.
Error: Process completed with exit code 2.

16:46:15.652 Running build in Washington, D.C., USA (East) – iad1
16:46:15.652 Build machine configuration: 2 cores, 8 GB
16:46:15.820 Cloning github.com/Sskutushev/Presentation-site-landing (Branch: main, Commit: 7b42789)
16:46:16.788 Cloning completed: 967.000ms
16:46:16.922 Restored build cache from previous deployment (4aerX4pgYjZerqBrVjvzCPLCsEqN)
16:46:17.534 Running "vercel build"
16:46:18.233 Vercel CLI 48.6.7
16:46:18.853 Installing dependencies...
16:46:20.704 
16:46:20.705 up to date in 2s
16:46:20.706 
16:46:20.706 200 packages are looking for funding
16:46:20.706   run `npm fund` for details
16:46:20.739 Running "npm run build"
16:46:20.869 
16:46:20.869 > dexsafe-wallet-pro@0.1.0 build
16:46:20.870 > tsc && vite build
16:46:20.870 
16:46:23.012 src/tests/integration/Navigation.test.tsx(27,10): error TS1128: Declaration or statement expected.
16:46:23.012 src/tests/integration/Navigation.test.tsx(30,19): error TS1005: ';' expected.
16:46:23.013 src/tests/integration/Navigation.test.tsx(31,9): error TS1109: Expression expected.
16:46:23.013 src/tests/integration/Navigation.test.tsx(31,10): error TS1128: Declaration or statement expected.
16:46:23.013 src/tests/integration/Navigation.test.tsx(32,8): error TS1005: ',' expected.
16:46:23.013 src/tests/integration/Navigation.test.tsx(34,3): error TS1109: Expression expected.
16:46:23.034 Error: Command "npm run build" exited with 2
(деплои на версель все три такой ошибкой)
а вот последний сборка на гит:
Run npm run build

> dexsafe-wallet-pro@0.1.0 build
> tsc && vite build

Error: src/tests/integration/Navigation.test.tsx(27,10): error TS1128: Declaration or statement expected.
Error: src/tests/integration/Navigation.test.tsx(30,19): error TS1005: ';' expected.
Error: src/tests/integration/Navigation.test.tsx(31,9): error TS1109: Expression expected.
Error: src/tests/integration/Navigation.test.tsx(31,10): error TS1128: Declaration or statement expected.
Error: src/tests/integration/Navigation.test.tsx(32,8): error TS1005: ',' expected.
Error: src/tests/integration/Navigation.test.tsx(34,3): error TS1109: Expression expected.
Error: Process completed with exit code 2.